--- a/Minerva/Site.Master
+++ b/Minerva/Site.Master
@@ -12,13 +12,18 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.syncfusion.com/17.3.0.14/js/web/flat-azure/ej.web.all.min.css" rel="stylesheet" />
     <link href="17.3.0.14/themes/web/content/default.css" rel="stylesheet" />
     <link href="17.3.0.14/themes/web/content/default-responsive.css" rel="stylesheet" />
 
+    <style type="text/css">
+        body {
+            font-family: "Avant Garde";
+        }
+    </style>
 </head>
 
 <body>
@@ -39,8 +44,8 @@
                 <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
                 <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
                 <asp:ScriptReference Name="WebFormsBundle" />
-                <asp:ScriptReference Path="//cdn.syncfusion.com/js/assets/external/jquery-1.11.3.min.js" > </asp:ScriptReference>	
-                <asp:ScriptReference Path="//cdn.syncfusion.com/js/assets/external/jquery.easing.1.3.min.js" ></asp:ScriptReference>
+                <asp:ScriptReference Path="//cdn.syncfusion.com/js/assets/external/jquery-1.11.3.min.js"></asp:ScriptReference>
+                <asp:ScriptReference Path="//cdn.syncfusion.com/js/assets/external/jquery.easing.1.3.min.js"></asp:ScriptReference>
                 <asp:ScriptReference Path="//cdn.syncfusion.com/js/assets/external/jsrender.min.js"></asp:ScriptReference>
                 <asp:ScriptReference Path="//cdn.syncfusion.com/17.3.0.14/js/web/ej.web.all.min.js "></asp:ScriptReference>
                 <%--Site Scripts--%>
@@ -50,9 +55,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header top">
-                    <a class="navbar-brand" runat="server" href="~/">
-                        <asp:Image runat="server" ImageUrl="~/Minerva.png" Width="45" ImageAlign="Top" />
-                    </a>
+                    <a class="navbar-brand" runat="server" href="~/">Minerva</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -65,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        
+
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
@@ -74,6 +77,6 @@
                 <p>&copy; <%: DateTime.Now.Year %> - Minerva</p>
             </footer>
         </div>
-        </form>
+    </form>
 </body>
 </html>
